--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="title">
-            <h1>
-                2048 Game
-            </h1>
+  <div class="container">
+      <div class="title">
+          <h1>
+              2048 Game
+          </h1>
+      </div>
+      <div class="wrapperTable">
+        <div id="score-board" class="score-board">
+          <span>
+            test
+          </span>
         </div>
-        <div class="wrapperTable">
-            <div class="table" id="table"></div>
-        </div>
-
-    </div>
-    <script type="module" src="/src/index.js"></script>
-
+          <div class="table" id="table"></div>
+      </div>
+  </div>
+  <script type="module" src="/src/index.js"></script>
 </body>
 
 </html>
