[+][add][score-board] display score method + hasWon done

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
       </div>
       <div class="wrapperTable">
         <div id="score-board" class="score-board">
-          <span>
-            test
-          </span>
+            <h2>score:</h2>
+            <span id="total" data-total="0">0</span>
         </div>
           <div class="table" id="table"></div>
       </div>
