[~][refactoring][fix-css]update css rules class & index.html

--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
         </div>
         <div class="table" id="table"></div>
       </div>
-      <pre class="rules">
-        <b>HOW TO PLAY:</b> Use the keyboard arrows to move the tiles.
-        When two tiles with the same number touch, <b>they merge!</b>
-      </pre>
-      <i>Original inventor of the game is Gabriele Cirulli. under free license MIT.</i>
+      <div class="rules">
+        <p>
+          <b>HOW TO PLAY:</b> Use the keyboard arrows to move the tiles.
+          When two tiles with the same number touch, <b>they merge!</b>
+        </p>
+        <i>Original inventor of the game is Gabriele Cirulli. under free license MIT.</i>
+      </div>
+
   </div>
   <script type="module" src="src/index.js"></script>
 </body>
