--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <p>Connect the numbers and get tile <span><b>2048!</b></span></p>
       </div>
       <div class="wrapperTable">
+
         <div class="wrapper-scores">
           <div id="score-board" class="score-board">
             <h2>score:</h2>
@@ -46,16 +47,17 @@
             <span id="best" data-best="0">0</span>
           </div>
         </div>
-        <div class="table" id="table"></div>
+          <div class="table" id="table"></div>
       </div>
       <div class="rules">
         <p>
           <b>HOW TO PLAY:</b> Use the keyboard arrows to move the tiles.
           When two tiles with the same number touch, <b>they merge!</b>
         </p>
+      </div>
+      <div class="inventor">
         <i>Original inventor of the game is Gabriele Cirulli. under free license MIT.</i>
       </div>
-
   </div>
   <script type="module" src="src/index.js"></script>
 </body>
